:heavy_plus_sign: basePath option

--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -23,6 +23,7 @@
     <div id="app"></div>
     <script>
       window.options = {
+        base: '{{{basePath}}}',
         hashbang: {{hashbang}}
       };
     </script>
