--- a/src/base.css
+++ b/src/base.css
@@ -19,6 +19,11 @@ label.sg {
   -webkit-tap-highlight-color: rgba(0, 0, 0, .3);
 }
 
+a.sg:hover,
+button.sg:hover {
+  opacity: .8;
+}
+
 .sg:focus {
   color: inherit;
   outline: none;
