--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -19,6 +19,7 @@
 
 .sg-nav-link:hover,
 .sg-nav-link.is-selected {
+  opacity: 1 !important;
   color: var(--white);
   background: var(--black);
 }
