--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -6,8 +6,8 @@
 
     <title>{{title}}</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-title" content="My App Name">
+    <meta name="viewport" content="width=device-width">
+    <meta name="apple-mobile-web-app-title" content="{{title}}">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
 
