--- a/src/components/Section/index.css
+++ b/src/components/Section/index.css
@@ -5,9 +5,9 @@
 .sg-section {
   overflow: hidden;
   margin-bottom: 15px;
-  border: 1px solid color(var(--gray-light) a(30%));
   border-radius: 5px;
   background: var(--white);
+  box-shadow: 0 0 2px rgba(0, 0, 0, .2);
 }
 
 .sg-section > :last-child {
