babel options support

--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -21,7 +21,7 @@
     <div id="app"></div>
     <script>
       window.options = {
-        base: '{{{basePath}}}',
+        base: '{{{root}}}',
         hashbang: {{hashbang}}
       };
     </script>
