--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/sg.css">
+    <link rel="stylesheet" href="src/_sg.css">
     {{#cssFils}}
       <link rel="stylesheet" href="{{{.}}}">
     {{/cssFils}}
@@ -28,7 +28,8 @@
     {{#jsFils}}
       <script src="{{{.}}}"></script>
     {{/jsFils}}
-    <script src="src/contents-bundle.js"></script>
-    <script src="src/sg.js"></script>
+    <script src="src/_react.js"></script>
+    <script src="src/_contents.js"></script>
+    <script src="src/_sg.js"></script>
   </body>
 </html>
