--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -28,7 +28,7 @@
     {{#jsFils}}
       <script src="{{{.}}}"></script>
     {{/jsFils}}
-    <script src="src/_react.js"></script>
+    <script src="{{react}}"></script>
     <script src="src/_contents.js"></script>
     <script src="src/_sg.js"></script>
   </body>
