--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -12,24 +12,21 @@
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/sg.css">
-    {{#cssFils}}
-      <link rel="stylesheet" href="{{{.}}}">
-    {{/cssFils}}
+    <link rel="stylesheet" href="src/app.css">
+    {{#cssFils}}<link rel="stylesheet" href="{{{.}}}">{{/cssFils}}
   </head>
   <body>
     <div id="app"></div>
+
     <script>
-      window.options = {
+      window.config = {
         base: '{{{root}}}',
         hashbang: {{hashbang}}
       };
     </script>
-    {{#jsFils}}
-      <script src="{{{.}}}"></script>
-    {{/jsFils}}
-    <script src="{{{react}}}"></script>
+    {{#jsFils}}<script src="{{{.}}}"></script>{{/jsFils}}
+    <script src="src/react_{{reactVersion}}.js"></script>
     <script src="src/contents.js"></script>
-    <script src="src/sg.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
