--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -13,7 +13,9 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="src/app.css">
-    {{#cssFils}}<link rel="stylesheet" href="{{{.}}}">{{/cssFils}}
+    {{#cssFils}}
+      <link rel="stylesheet" href="{{{.}}}">
+    {{/cssFils}}
   </head>
   <body>
     <div id="app"></div>
@@ -24,7 +26,9 @@
         hashbang: {{hashbang}}
       }
     </script>
-    {{#jsFils}}<script src="{{{.}}}"></script>{{/jsFils}}
+    {{#jsFils}}
+      <script src="{{{.}}}"></script>
+    {{/jsFils}}
     <script src="src/react_{{reactVersion}}.js"></script>
     <script src="src/contents.js"></script>
     <script src="src/app.js"></script>
