Move docgen out of file gen to be cached into the index.html: - Adds the reactDocGenRefId propType to reference a property meta - Adds the examples propType to give a set of examples via a set of props

--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -25,6 +25,11 @@
         base: '{{{root}}}',
         hashbang: {{hashbang}}
       }
+
+      window.RSG = {
+          propMetas: {{{propMetas}}}
+      }
+
     </script>
     {{#jsFils}}
       <script src="{{{.}}}"></script>
