Support code examples for each example and place within tab

--- a/app/components/Section/index.css
+++ b/app/components/Section/index.css
@@ -192,7 +192,8 @@
  */
 
 .sg-section-code {
-  border-bottom: 1px solid var(--gray-lighter);
+  border: 1px solid var(--gray-lighter);
+  margin-top: 10px;
 }
 
 .sg-section-code code {
