--- a/app/components/Section/index.css
+++ b/app/components/Section/index.css
@@ -183,7 +183,7 @@
 .sg-section-example {
   position: relative;
   overflow: auto;
-  padding: 20px 0 20px 0;
+  padding: 20px 0 0 0;
   border-bottom: 1px solid var(--gray-lighter);
 }
 
