--- a/app/common/base.css
+++ b/app/common/base.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  opacity: 1;
   color: inherit;
   border: none;
   background: transparent;
