--- a/app/components/Section/index.css
+++ b/app/components/Section/index.css
@@ -28,6 +28,7 @@
   display: flex;
   padding: 15px 20px;
   border-top: 1px solid var(--gray-lighter);
+
   align-items: center;
 }
 
@@ -78,7 +79,7 @@
   color: inherit;
   border: none;
   background: transparent;
-  font: 300 14px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .sg-section-description > * {
@@ -148,6 +149,7 @@
   margin-right: .5em;
   content: "•";
   color: var(--gray);
+  font-size: .8em;
 }
 
 .sg-section-description ol {
@@ -196,26 +198,32 @@
 }
 
 .sg-section-code code {
+  display: block;
   padding: 20px;
   background: var(--white);
   font-family: monospace;
-  display: block;
 }
 
 /**
  * Props section
  */
-.sg-section-description.sg-props > ul {
+
+.sg-props ul {
   margin-left: 20px;
 }
 
-.sg-section-description.sg-props code {
-  color: #4463C5;
-}
-.sg-section-description.sg-props p > code:first-child {
-  color: #d14;
+.sg-props li {
+  margin-bottom: 10px;
 }
 
-.sg-section-description.sg-props > ul li > code:first-child {
-  color: #d14;
+.sg-props code {
+  color: var(--purple);
+}
+
+.sg-props p > code:first-child {
+  color: var(--red);
+}
+
+.sg-props > ul li > code:first-child {
+  color: var(--red);
 }
