--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -29,12 +29,9 @@
     {{#jsFils}}
       <script src="{{{.}}}"></script>
     {{/jsFils}}
-    <script src="src/react_{{reactVersion}}.js"></script>
     <script src="src/propsdoc.js"></script>
-    <script src="src/contents.js"></script>
+    <script src="src/vendor.js"></script>
     <script src="src/app.js"></script>
-    {{#livereload}}
-        <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':{{livereload}}/livereload.js?snipver=1"></' + 'script>')</script>
-    {{/livereload}}
+    <script src="src/bundle.js"></script>
   </body>
 </html>
