--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -12,7 +12,6 @@
     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="src/app.css">
     {{#cssFils}}
       <link rel="stylesheet" href="{{{.}}}">
     {{/cssFils}}
@@ -29,9 +28,8 @@
     {{#jsFils}}
       <script src="{{{.}}}"></script>
     {{/jsFils}}
-    <script src="src/propsdoc.js"></script>
     <script src="src/vendor.js"></script>
-    <script src="src/app.js"></script>
-    <script src="src/bundle.js"></script>
+    <script src="src/components.bundle.js"></script>
+    <script src="src/app.bundle.js"></script>
   </body>
 </html>
