--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -28,8 +28,6 @@
     {{#jsFils}}
       <script src="{{{.}}}"></script>
     {{/jsFils}}
-    <script src="src/vendor.js"></script>
-    <script src="src/components.bundle.js"></script>
-    <script src="src/app.bundle.js"></script>
+    <script src="src/bundle.js"></script>
   </body>
 </html>
