Add performance enhancing files

--- a/lib/fixtures/index.html.mustache
+++ b/lib/fixtures/index.html.mustache
@@ -28,6 +28,7 @@
     {{#jsFils}}
       <script src="{{{.}}}"></script>
     {{/jsFils}}
+    <script src="src/vendor.bundle.js"></script>
     <script src="src/bundle.js"></script>
   </body>
 </html>
